Add courses in frontend
